--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 
@@ -61,19 +62,89 @@
 <br>
 <br>
 <section>
-<img src="./Assets/imagenes/honolulu.jpg" alt="Honolulu">
+<img src="./Assets/imagenes/honolulu.jpg" alt="Honolulu" width="600">
 <div>
     <h3>Bs. As. Octubre</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis laboriosam tenetur incidunt? Soluta perferendis incidunt earum perspiciatis qui veniam possimus aut eos, delectus error quos ut corrupti sapiente aliquam assumenda.</p>
     <a href="">Conoce mas</a>
 </div>
+<br>
+<br>
 
 </section>
 
 <section>
+    <table>
+        <thead>
+            <tr>
+                <th>Orador</th>
+                <th>Día</th>
+                <th>Horario</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Steve Jobs</td>
+                <td>Lun y Miérc</td>
+                <td>18:30 a 20:00</td>
+            </tr>
+            <tr>
+                <td>BIll Gates</td>
+                <td>Martes</td>
+                <td>18:30 a 20:00</td>
+            </tr>
+            <tr>
+                <td>Ada Lovelace</td>
+                <td>Jueves</td>
+                <td>18:30 a 20:00</td>
+            </tr>
+        </tbody>
+
+    </table>
 <!--aca va a ir el formulario-->
 </section>
+<br><br>
+<section>
+    <form action="">
+        <div>
+            <input type="text" placeholder="Nombre">
+            <input type="text" placeholder="Apellido">
+        </div>
+<div>
+    <label for="">Email</label>
+    <input type="email">
+</div>
+<div>
+    <label for="">Ingrese contraseña</label>
+    <input type="password">
+</div>
+<div><textarea name="" id="" cols="50" rows="10" placeholder="Sobre que quieres Hablar?">
+</textarea></div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam hic debitis exercitationem quisquam culpa voluptatum iste cupiditate cum, rerum nobis sunt, quam inventore est quidem quo veniam! Quidem, reiciendis.</p>
+<div>
+<p>Indique su provincia</p>
+<select >
+<option value="">Buenos Aires</option>
+<option value="">Santa Fe</option>
+<option value="">Cordoba</option>
 
+</select>
+</div>
+<br><br>
+<div>
+    <p>Terminos y condiciones</p>
+    <input type="checkbox">
+</div>
+<br>
+<div>
+    <input type="submit" value="Enviar Formulario">
+    <input type="reset" value="Limpiar">
+</div>
+
+
+    </form>
+</section>
+<br><br><br>
 <footer>
     <a href=""></a>
     <a href=""></a>
